--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "^4.18.2",
     "handlebars": "^4.7.7",
     "html-pdf-phantomjs-included": "^1.0.2",
+    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "node-xlsx": "^0.23.0",
     "nodemon": "^3.0.1",
