--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # networks:
-    #   - proxy
-    # labels:
-    #   - 'traefik.enable=true'
-    #   - 'traefik.docker.network=proxy'
-    #   - 'traefik.http.routers.pdf-converter.rule=Host(`pdf-converter.fildabert.com`)'
-    #   - 'traefik.http.routers.pdf-converter.entrypoints=websecure'
-    #   - 'traefik.http.services.pdf-converter.loadbalancer.server.port=3002'
+    networks:
+      - proxy
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.docker.network=proxy'
+      - 'traefik.http.routers.pdf-converter.rule=Host(`pdf-converter.fildabert.com`)'
+      - 'traefik.http.routers.pdf-converter.entrypoints=websecure'
+      - 'traefik.http.services.pdf-converter.loadbalancer.server.port=3002'
     ports:
       - 3002:3002
     command: sh -c 'npm run start'
     restart: unless-stopped
-# networks:
-#   proxy:
-#     external: true
+networks:
+  proxy:
+    external: true
