--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "tailwind": "tailwindcss -i ./input.css -o ./output.css",
     "start": "node app.js",
     "test": "mocha tests/unit/",
-    "dev": "nodemon app.js"
+    "dev": "npm run tailwind && nodemon app.js"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^9.1.4"
+    "mocha": "^9.1.4",
+    "tailwindcss": "^3.3.3"
   }
 }
